[package]
name = "silentlink"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
btleplug = "0.11"
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
sha2 = "0.10"
hkdf = "0.12"
x25519-dalek = { version = "2.0", features = ["serde"] }
rand = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
futures = "0.3"
async-trait = "0.1"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
cpal = "0.15"  # Cross-platform audio
rustfft = "6.1"  # FFT for signal processing
apodize = "1.0"  # Audio windowing
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
config = "0.14"
toml = "0.8"  # For configuration serialization
dirs = "5.0"
qrcode = "0.14"
image = "0.24"
base64 = "0.22"
